src/styles/main.css
body {
    background-color: #f8f8f8;
}

.row {
    display: flex;

    flex-direction: row;

    justify-content: center;
}

@media screen and (max-width: 575px) {
    .row {
        flex-direction: column;
    }
}

#tooltip {
    display: none;
    position: absolute;

    flex-direction: column;
    align-items: center;
    justify-content: center;

    width: 250px;

    background-color: white;
    border: 1px solid #cccccc;
    padding: 20px;
    border-radius: 3px;
}

#tooltip .tableValue {
    text-align: right;
}

